SERVER-78116 Attach write concern to persistent task store commands